--- a/index.HTML
+++ b/index.HTML
@@ -4,7 +4,7 @@
 	   <script src="kca.js"></script>
     <link rel="stylesheet" type="text/css" href="kca.css"> 
 	
-    <title>Krishan Aja</title>
+    <title>-- Krishan Aja --</title>
 	<style>
 	
 ul {
