--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@ li {
 				<img src="http://cssslider.com/sliders/demo-9/data1/images/flower61324_1280.jpg" style="width: 100%;">
 			</div>
 			<li class='num0 img'>
-				<img src='MaroonSenior.PNG' alt='Wordpress pure free slideshow framed' style='width:550px; Height:700px' title='Senior' />
+				<img src='MaroonSenior.PNG' alt='Wordpress pure free slideshow framed' style='width:300px; Height:300px;' title='Senior' />
 			</li>
 			<li class='num1 img'>
-				<img src='baby.JPG' alt='Responsive free download gallery slideshow plugins text rotation' Style='height:700px; width:550px;' title='BABY' />
+				<img src='baby.JPG' alt='Responsive free download gallery slideshow plugins text rotation' Style='height:300px; width:300px;' title='BABY' />
 			</li>
 			<li class='num2 img'>
-				<img src='2015.JPG' alt='Responsive fade link header carousel text button' style='Width:550px; Height:700px;' title='2015' />
+				<img src='2015.JPG' alt='Responsive fade link header carousel text button' style='Width:300px; Height:300px;' title='2015' />
 			</li>
         
 		
